fix: set price tag align in product card

--- a/css/styles.css
+++ b/css/styles.css
@@ -5857,6 +5857,8 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   gap: 15px 20px;
 }
 .c-form-checkbox-label {
+  flex: 1 1 auto;
+  width: 100%;
   font-family: "Inter SemiBold", sans-serif;
   font-size: 14px;
   color: #1C2128;
