--- a/sass/components/_card.sass
+++ b/sass/components/_card.sass
@@ -142,6 +142,8 @@
         flex-wrap: wrap
         gap: 15px 20px
       &-label
+        flex: 1 1 auto
+        width: 100%
         +inter-semibold
         font-size: 14px
         color: $grey90
